Update java syntax in GrowOnlyIteratorTest to compatible with jdk 11